--- a/Primera_Entrega/tables.html
+++ b/Primera_Entrega/tables.html
@@ -20,7 +20,15 @@
 
   <!-- Custom styles for this page -->
   <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.rtl.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-grid.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-grid.rtl.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.rtl.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.rtl.css"/>
+  <link rel="stylesheet" href="/Primera_Entrega/css/styles.css"/>
 </head>
 
 <body id="page-top">
