--- a/Primera_Entrega/Crear_Cuenta_Administrador.html
+++ b/Primera_Entrega/Crear_Cuenta_Administrador.html
@@ -67,7 +67,7 @@
                 <div class="col-lg-7 bg-danger">
                     <div class="p-5">
                         <div class="text-center">
-                            <h1 class="h4 text-gray-900 mb-4">Crear Cuenta Estudiante</h1>
+                            <h1 class="h4 text-gray-900 mb-4">Crear Cuenta Administrador</h1>
 
                         </div>
                         <form class="user">
@@ -111,9 +111,19 @@
                                                placeholder="Apellidos">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                           placeholder="Email..">
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="email" class="form-control form-control-user"
+                                               id="exampleInputEmail"
+                                               placeholder="Email..">
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <label for="state" class="form-label">Fecha Nacimiento</label>
+                                        <input type="date" class="form-control form-control-user" id="exampleLastName"
+                                               placeholder="DD/MM/YYYYY">
+                                    </div>
+
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
@@ -150,9 +160,9 @@
                                         <label for="state" class="form-label">Institucion</label>
                                         <select class="form-select" id="state" required>
                                             <option value="">.......</option>
-                                            <option>cedula de ciudadania</option>
-                                            <option>Tarjeta Indentidad</option>
-                                            <option>Cedula Extranjera</option>
+                                            <option>1</option>
+                                            <option>1</option>
+                                            <option>1</option>
                                         </select>
                                         <div class="invalid-feedback">
                                             Please provide a valid state.
@@ -162,9 +172,9 @@
                                         <label for="state" class="form-label">Sede</label>
                                         <select class="form-select" id="state" required>
                                             <option value="">.......</option>
-                                            <option>cedula de ciudadania</option>
-                                            <option>Tarjeta Indentidad</option>
-                                            <option>Cedula Extranjera</option>
+                                            <option>1</option>
+                                            <option>1</option>
+                                            <option>1</option>
                                         </select>
                                         <div class="invalid-feedback">
                                             Please provide a valid state.
@@ -173,7 +183,7 @@
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-md-4">
-                                        <label for="state" class="form-label">Grado Actual</label>
+                                        <label for="state" class="form-label">Tipo Documento</label>
                                         <select class="form-select" id="state" required>
                                             <option value="">.......</option>
                                             <option>cedula de ciudadania</option>
