--- a/Primera_Entrega/Estudiante.html
+++ b/Primera_Entrega/Estudiante.html
@@ -69,13 +69,14 @@
                         Logout
                     </a>
                 </div>
+            </li>
         </div>
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="index_Estudiante.html">
                 <i class="fas fa-fw fa-home" data-feather="home"></i>
                 <span>Tablero De Mandos</span></a>
         </li>
