--- a/Primera_Entrega/Votar_estudiante.html
+++ b/Primera_Entrega/Votar_estudiante.html
@@ -72,7 +72,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="index_Estudiante.html">
                 <i class="fas fa-fw fa-home" data-feather="home"></i>
                 <span>Tablero De Mandos</span></a>
         </li>
@@ -297,7 +297,7 @@
                                     <div class="card shadow-sm">
                                         <img src="https://i.pinimg.com/550x/92/0b/dd/920bdd8fd57c0d51a8af12eb1012bdf4.jpg"
                                              class="img-thumbnail" alt="cards.img-top"
-                                             style="height: 400px;width: 400px">
+                                             style="height: 400px;width: 400px;border-radius: 180px;">
                                         <div class="card-body">
                                             <p class="card-text">Candidato 01</p>
                                             <p class="card-text">Maria Alejandra Pedraza</p>
@@ -313,10 +313,10 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="card shadow-sm">
+                                    <div class="card shadow-sm " style="">
                                         <img src="https://i.pinimg.com/originals/57/8f/57/578f57a2830de4e5f44021c059397f16.jpg"
                                              class="img-thumbnail" alt="cards.img-top"
-                                             style="height: 400px;width: 400px">
+                                             style="height: 400px;width: 400px;border-radius:190px;">
                                         <div class="card-body">
                                             <p class="card-text">Candidato 02</p>
                                             <p class="card-text">Valentina Gozales</p>
@@ -335,7 +335,7 @@
                                     <div class="card shadow-sm">
                                         <img src="https://i.pinimg.com/originals/57/8f/57/578f57a2830de4e5f44021c059397f16.jpg"
                                              class="img-thumbnail" alt="cards.img-top"
-                                             style="height: 400px;width: 400px">
+                                             style="height: 400px;width: 400px;border-radius: 190px;">
                                         <div class="card-body">
                                             <p class="card-text">Candidato 03</p>
                                             <p class="card-text">Lucia Morales Rojas</p>
@@ -357,25 +357,36 @@
 
             </div>
 
-        </div>
-        <!-- /.container-fluid -->
+            <!-- End of Topbar -->
 
-    </div>
-    <!-- End of Main Content -->
+            <!-- Begin Page Content -->
+            <div class="container-fluid">
 
-    <!-- Footer -->
-    <footer class="sticky-footer bg-white">
-        <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-                <span>Copyright &copy; Your Website 2020</span>
+                <!-- 404 Error Text -->
+                <!--  <div class="text-center">
+                      <div class="error mx-auto" data-text="404">404</div>
+                      <p class="lead text-gray-800 mb-5">Page Not Found</p>
+                      <p class="text-gray-500 mb-0">It looks like you found a glitch in the matrix...</p>
+                      <a href="index.html">&larr; Back to Dashboard</a>
+                  </div>-->
+
             </div>
+            <!-- /.container-fluid -->
+
         </div>
-    </footer>
-    <!-- End of Footer -->
+        <!-- End of Main Content -->
 
-</div>
-<!-- End of Content Wrapper -->
-
+        <!-- Footer -->
+        <footer class="sticky-footer bg-white">
+            <div class="container my-auto">
+                <div class="copyright text-center my-auto">
+                    <span>Copyright &copy; Your Website 2019</span>
+                </div>
+            </div>
+        </footer>
+        <!-- End of Footer -->
+    </div>
+    <!-- End of Content Wrapper -->
 </div>
 <!-- End of Page Wrapper -->
 
@@ -398,7 +409,7 @@
             <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login_Registrador.html">Logout</a>
+                <a class="btn btn-primary" href="Inicio_usuarios.html">Logout</a>
             </div>
         </div>
     </div>
