--- a/Primera_Entrega/forgot-password.html
+++ b/Primera_Entrega/forgot-password.html
@@ -3,88 +3,104 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>SB Admin 2 - Forgot Password</title>
+    <title>SB Admin 2 - Forgot Password</title>
 
-  <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <!-- Custom fonts for this template-->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
-  <!-- Custom styles for this template-->
-  <link href="css/sb-admin-2.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.rtl.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-grid.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-grid.rtl.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.rtl.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.rtl.css"/>
-  <link rel="stylesheet" href="/Primera_Entrega/css/styles.css"/>
+    <!-- Custom styles for this template-->
+    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.rtl.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-grid.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-grid.rtl.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.rtl.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.rtl.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/styles.css"/>
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-dark">
 
-  <div class="container">
+<div class="container">
 
     <!-- Outer Row -->
     <div class="row justify-content-center">
 
-      <div class="col-xl-10 col-lg-12 col-md-9">
+        <div class="col-xl-10 col-lg-12 col-md-9">
 
-        <div class="card o-hidden border-0 shadow-lg my-5">
-          <div class="card-body p-0">
-            <!-- Nested Row within Card Body -->
-            <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-password-image"></div>
-              <div class="col-lg-6">
-                <div class="p-5">
-                  <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
-                    <p class="mb-4">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
-                  </div>
-                  <form class="user">
-                    <div class="form-group">
-                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block bg-light">
+                            <div class="p-5">
+                                <div class="text-lg-right">
+                                    <h1 class="h4 text-gray-900 mb-8">Bienvenido</h1>
+                                </div>
+                                <div class="text-lg-left">
+                                    <h1 class="h4 text-gray-900 mb-8">Muestra de la Institucion</h1>
+                                </div>
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">Sistema De Votacion</h1>
+                                </div>
+                                </div>
+                        </div>
+                        <div class="col-lg-6 bg-danger">
+                            <div class="p-5 bg-danger">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-2">¿Ha olvidado su contraseña?</h1>
+                                    <p class="mb-4">Ingrese Datos</p>
+                                </div>
+                                <form class="user">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control form-control-user"
+                                               id="exampleInputEmail" aria-describedby="emailHelp"
+                                               placeholder="Enter Email Address...">
+                                    </div>
+                                    <a href="login_Registrador.html" class="btn btn-primary btn-user btn-block">
+                                        Restablecer contraseña
+                                    </a>
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" href="Crear_Cuenta_Estudiante.html">Crear Cuenta</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" href="login_Registrador.html">¿Ya tienes una cuenta? Inicie
+                                        sesión.</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <a href="login_Registrador.html" class="btn btn-primary btn-user btn-block">
-                      Reset Password
-                    </a>
-                  </form>
-                  <hr>
-                  <div class="text-center">
-                    <a class="small" href="Crear_Cuenta_Estudiante.html">Create an Account!</a>
-                  </div>
-                  <div class="text-center">
-                    <a class="small" href="login_Registrador.html">Already have an account? Login!</a>
-                  </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
 
-      </div>
+        </div>
 
     </div>
 
-  </div>
+</div>
 
-  <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
 
 </body>
 
