--- a/Primera_Entrega/Crear_Cuenta_Estudiante.html
+++ b/Primera_Entrega/Crear_Cuenta_Estudiante.html
@@ -112,9 +112,19 @@
                                                placeholder="Apellidos">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                           placeholder="Email..">
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="email" class="form-control form-control-user"
+                                               id="exampleInputEmail"
+                                               placeholder="Email..">
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <label for="state" class="form-label">Fecha Nacimiento</label>
+                                        <input type="date" class="form-control form-control-user" id="exampleLastName"
+                                               placeholder="DD/MM/YYYYY">
+                                    </div>
+
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
@@ -159,8 +169,21 @@
                                             Please provide a valid state.
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-md-4">
                                         <label for="state" class="form-label">Sede</label>
+                                        <select class="form-select" id="state" required>
+                                            <option value="">.......</option>
+                                            <option>cedula de ciudadania</option>
+                                            <option>Tarjeta Indentidad</option>
+                                            <option>Cedula Extranjera</option>
+                                        </select>
+                                        <div class="invalid-feedback">
+                                            Please provide a valid state.
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <label for="state" class="form-label">T Documento</label>
                                         <select class="form-select" id="state" required>
                                             <option value="">.......</option>
                                             <option>cedula de ciudadania</option>
