--- a/Primera_Entrega/Institucion.html
+++ b/Primera_Entrega/Institucion.html
@@ -78,7 +78,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="index_Administrador.html">
                 <i class="fas fa-fw fa-home" data-feather="home"></i>
                 <span>Tablero De Mandos</span></a>
         </li>
@@ -120,7 +120,7 @@
         </div>
         <!-- Nav Item - modificar Candidato| -->
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="index_Administrador.html">
                 <i class="fas fa-fw fa-user-edit"></i>
                 <span>Modificar Candidato</span></a>
         </li>
@@ -129,7 +129,7 @@
 
         <!-- Nav Item - modificar Convocatoria| -->
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="index_Administrador.html">
                 <i class="fas fa-fw fa-calendar-week"></i>
                 <span>Modificar Convocatoria</span></a>
         </li>
@@ -138,7 +138,7 @@
 
         <!-- Nav Item - modificar Institucion| -->
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="index_Administrador.html">
                 <i class="fas fa-fw fa-school"></i>
                 <span>Modificar Institucion Educativa</span></a>
         </li>
@@ -148,42 +148,6 @@
         <div class="sidebar-heading">
             Ver Resultados
         </div>
-
-        <!-- Nav Item - Pages Collapse Menu -->
-        <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-               aria-expanded="true" aria-controls="collapsePages">
-                <i class="fas fa-fw fa-folder"></i>
-                <span>Pages</span>
-            </a>
-            <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    <h6 class="collapse-header">Login Screens:</h6>
-                    <a class="collapse-item" href="login_Registrador.html">Login</a>
-                    <a class="collapse-item" href="Crear_Cuenta_Estudiante.html">Register</a>
-                    <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                    <div class="collapse-divider"></div>
-                    <h6 class="collapse-header">Other Pages:</h6>
-                    <a class="collapse-item" href="404.html">404 Page</a>
-                    <a class="collapse-item" href="blank.html">Blank Page</a>
-                </div>
-            </div>
-        </li>
-
-        <!-- Nav Item - Charts -->
-        <li class="nav-item">
-            <a class="nav-link" href="charts.html">
-                <i class="fas fa-fw fa-chart-area"></i>
-                <span>Charts</span></a>
-        </li>
-
-        <!-- Nav Item - Tables -->
-        <li class="nav-item">
-            <a class="nav-link" href="tables.html">
-                <i class="fas fa-fw fa-table"></i>
-                <span>Tables</span></a>
-        </li>
-
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
 
@@ -576,7 +540,7 @@
             <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login_Registrador.html">Logout</a>
+                <a class="btn btn-primary" href="Inicio_usuarios.html">Logout</a>
             </div>
         </div>
     </div>
