--- a/Primera_Entrega/index_Administrador.html
+++ b/Primera_Entrega/index_Administrador.html
@@ -9,21 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>candidato</title>
-
-    <!-- Custom fonts for this template-->
+    <title>index Adminnistrador</title>    <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-          rel="stylesheet">
+    <link
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet">
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.css"/>
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.rtl.css"/>
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-grid.css"/>
@@ -32,6 +26,8 @@
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.rtl.css"/>
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.css"/>
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.rtl.css"/>
+    <link rel="stylesheet" href="/Primera_Entrega/css/styles.css"/>
+
 </head>
 
 <body id="page-top">
@@ -41,36 +37,37 @@
 
     <!-- Sidebar -->
     <ul class="navbar-nav bg-dark sidebar sidebar-dark accordion" id="accordionSidebar">
+
         <!-- Sidebar - Brand -->
-        <!-- Nav Item - User Information -->
-        <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle-split" href="#" id="userDropdown" role="button"
-               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
-            </a>
-            <!-- Dropdown - User Information -->
-            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                 aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Profile
+        <div class="dropdown">
+            <li class="nav-item dropdown no-arrow">
+                <a class="nav-link dropdown-toggle-split" href="#" id="userDropdown" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                    <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
                 </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Settings
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Activity Log
-                </a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Logout
-                </a>
-            </div>
-        </li>
+                <!-- Dropdown - User Information -->
+                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                     aria-labelledby="userDropdown">
+                    <a class="dropdown-item" href="#">
+                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Profile
+                    </a>
+                    <a class="dropdown-item" href="#">
+                        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Settings
+                    </a>
+                    <a class="dropdown-item" href="#">
+                        <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Activity Log
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Logout
+                    </a>
+                </div>
+        </div>
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
 
@@ -82,10 +79,11 @@
         </li>
         <!-- Divider -->
         <hr class="sidebar-divider">
-
+        <!-- Heading -->
         <div class="sidebar-heading">
             Registrar
         </div>
+
         <!-- Nav Item - Candidato -->
         <li class="nav-item">
             <a class="nav-link" href="candidato.html">
@@ -133,7 +131,8 @@
         </li>
         <!-- Divider -->
         <hr class="sidebar-divider">
-        <!-- Nav Item - modificar Institucion| -->
+
+        <!-- Nav Item - modificar Candidato| -->
         <li class="nav-item">
             <a class="nav-link" href="index_Administrador.html">
                 <i class="fas fa-fw fa-school"></i>
@@ -145,7 +144,6 @@
         <div class="sidebar-heading">
             Ver Resultados
         </div>
-
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
 
@@ -155,9 +153,10 @@
         </div>
 
     </ul>
-    <!-- End of Sidebar -->
+
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
+
         <!-- Main Content -->
         <div id="content">
 
@@ -169,6 +168,18 @@
                     <i class="fa fa-bars"></i>
                 </button>
 
+                <!-- Topbar Search -->
+                <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    <div class="input-group">
+                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                               aria-label="Search" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="button">
+                                <i class="fas fa-search fa-sm"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
 
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
@@ -320,169 +331,55 @@
 
                     <div class="topbar-divider d-none d-sm-block"></div>
 
+                    <!-- Nav Item - User Information -->
+                    <li class="nav-item dropdown no-arrow">
+                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                            <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                        </a>
+                        <!-- Dropdown - User Information -->
+                        <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                             aria-labelledby="userDropdown">
+                            <a class="dropdown-item" href="#">
+                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Profile
+                            </a>
+                            <a class="dropdown-item" href="#">
+                                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Settings
+                            </a>
+                            <a class="dropdown-item" href="#">
+                                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Activity Log
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Logout
+                            </a>
+                        </div>
+                    </li>
+
                 </ul>
 
             </nav>
             <!-- End of Topbar -->
 
-            <!-- Begin Page Content -->
+    <!--         Begin Page Content
             <div class="container-fluid">
 
-                <!-- Page Heading -->
-                <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h1 class="h3 mb-0 text-gray-800">Registro candidatos</h1>
+                 404 Error Text
+                <div class="text-center">
+                    <div class="error mx-auto" data-text="404">404</div>
+                    <p class="lead text-gray-800 mb-5">Page Not Found</p>
+                    <p class="text-gray-500 mb-0">It looks like you found a glitch in the matrix...</p>
+                    <a href="index.html">&larr; Back to Dashboard</a>
                 </div>
-                <form class="needs-validation" novalidate>
 
-                    <div class="row g-3">
-                        <div class="col-sm-6">
-                            <form name="subida-imagenes" type="POST" enctype="multipart/formdata">
-                                <form name="subida-imagenes" type="POST" enctype="multipart/formdata">
-                                    <label for="firstName" class="form-label">Subir Foto</label>
-                                    <input type="file" name="imagen"/>
-                                </form>
-                            </form>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <label for="firstName" class="form-label">Nombres Candidato</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="Nombres Candidatos"
-                                   value=""
-                                   required>
-                            <div class="invalid-feedback">
-                                Valid first name is required.
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <label for="lastName" class="form-label">Apellidos Candidatos</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="Apellidos Candidato"
-                                   value="" required>
-                            <div class="invalid-feedback">
-                                Valid last name is required.
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <label for="numerodocumento" class="form-label">Numero Docuemento</label>
-                            <input type="text" class="form-control" id="numerodocumento"
-                                   placeholder="Numero Documento"
-                                   value="" required>
-                            <div class="invalid-feedback">
-                                Valid last name is required.
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="state" class="form-label">Tipo de docuemneto </label>
-                            <select class="form-select" id="state" required>
-                                <option value="">.......</option>
-                                <option>cedula de ciudadania</option>
-                                <option>Tarjeta Indentidad</option>
-                                <option>Cedula Extranjera</option>
-                            </select>
-                            <div class="invalid-feedback">
-                                Please provide a valid state.
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <label for="zip" class="form-label">Cargue Documento
-                                <i class="fas fa-fw fa-archive"></i>
-                            </label>
-                            <input type="file" class="form-control" id="zip" placeholder="" required>
-                            <div class="invalid-feedback">
-                                Zip code required.
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <label for="numerodocumento" class="form-label">Grado Actual</label>
-                            <input type="number" class="form-control" id="numerodocumento" placeholder="Grado"
-                                   value="" required>
-                            <div class="invalid-feedback">
-                                Valid last name is required.
-                            </div>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="username" class="form-label">Fecha Postulacion</label>
-                            <div class="input-group has-validation">
-                                <input type="datetime-local" class="form-control" id="username"
-                                       placeholder="DD/MM/YYYYY"
-                                       required>
-                                <div class="invalid-feedback">
-                                    Your username is required.
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12">
-                            <label for="email" class="form-label">Fecha Nacimiento</label>
-                            <input type="datetime-local" class="form-control" id="email" placeholder="DD/MM/YYYYY">
-                            <div class="invalid-feedback">
-                                Please enter a valid email address for shipping updates.
-                            </div>
-                        </div>
-                    </div>
-
-                    <hr class="my-4">
-
-                    <h4 class="mb-3">Tipo Documento</h4>
-
-                    <div class="my-3">
-                        <div class="form-check">
-                            <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked
-                                   required>
-                            <label class="form-check-label" for="credit">Cedula</label>
-                        </div>
-                        <div class="form-check">
-                            <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-                            <label class="form-check-label" for="debit">Tarjeta Indentidad</label>
-                        </div>
-                        <div class="form-check">
-                            <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-                            <label class="form-check-label" for="paypal">Cedula Extranjeria</label>
-                        </div>
-                    </div>
-
-                    <!--   <div class="row gy-3">
-                           <div class="col-md-6">
-                               <label for="cc-name" class="form-label">Name on card</label>
-                               <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                               <small class="text-muted">Full name as displayed on card</small>
-                               <div class="invalid-feedback">
-                                   Name on card is required
-                               </div>
-                           </div>
-
-                           <div class="col-md-6">
-                               <label for="cc-number" class="form-label">Credit card number</label>
-                               <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                               <div class="invalid-feedback">
-                                   Credit card number is required
-                               </div>
-                           </div>
-
-                           <div class="col-md-3">
-                               <label for="cc-expiration" class="form-label">Expiration</label>
-                               <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                               <div class="invalid-feedback">
-                                   Expiration date required
-                               </div>
-                           </div>
-
-                           <div class="col-md-3">
-                               <label for="cc-cvv" class="form-label">CVV</label>
-                               <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                               <div class="invalid-feedback">
-                                   Security code required
-                               </div>
-                           </div>
-                       </div>-->
-
-                    <hr class="my-4">
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">Guardar</button>
-                </form>
             </div>
-            <!-- /.container-fluid -->
-
+             /.container-fluid
+-->
         </div>
         <!-- End of Main Content -->
 
