--- a/Primera_Entrega/login_Estudiante.html
+++ b/Primera_Entrega/login_Estudiante.html
@@ -88,7 +88,7 @@
                                         <div class="row">
                                             <div class="col">
                                                 <div class="text-center">
-                                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                                    <a href="index_Estudiante.html" class="btn btn-primary btn-user btn-block">
                                                         Iniciar Sesion
                                                     </a>
                                                 </div>
