--- a/Primera_Entrega/login_Registrador.html
+++ b/Primera_Entrega/login_Registrador.html
@@ -18,6 +18,8 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <!-- Custom styles for this template-->
+    <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.css"/>
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap.rtl.css"/>
@@ -27,7 +29,6 @@
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-reboot.rtl.css"/>
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.css"/>
     <link rel="stylesheet" href="/Primera_Entrega/css/bootstrap-utilities.rtl.css"/>
-    <link rel="stylesheet" href="/Primera_Entrega/css/styles.css"/>
 </head>
 
 <body class="bg-dark">
@@ -87,7 +88,7 @@
                                         <div class="row">
                                             <div class="col">
                                                 <div class="text-center">
-                                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                                    <a href="index_Administrador.html" class="btn btn-primary btn-user btn-block">
                                                         Iniciar Sesion
                                                     </a>
                                                 </div>
@@ -97,7 +98,6 @@
                                                     <a class="btn btn-primary btn-user btn-block"
                                                        href="forgot-password.html">Olvide Contraseña?</a>
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
